<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="150sp"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">


        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/enter_the_title"
            android:inputType="textAutoCorrect|text"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/cancelBtn"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textInput"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textInput"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/cancel"/>


    <Button
        android:id="@+id/saveBtn"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancelBtn"
        android:layout_alignBottom="@+id/cancelBtn"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_toLeftOf="@+id/cancelBtn"
        android:layout_toStartOf="@+id/cancelBtn"
        android:text="@string/save"/>


</RelativeLayout>